<resources>
    <string name="app_name">Projeto Firebase</string>
    <string name="entrar">Entrar</string>
    <string name="text_cadastro">Crie uma conta clicando aqui</string>
    <string name="text_cadastrese">Cadastre-se</string>
    <string name="senha">Senha</string>
    <string name="email">Email</string>
    <string name="nome">Nome</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="exluir_conta">Excluir conta</string>

</resources>