<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormCadastro"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/titleCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/text_cadastrese"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="50sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
    />

    <View
        android:id="@+id/containerComponents"
        style="@style/ContainerComponents"
        app:layout_constraintTop_toBottomOf="@id/titleCadastro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
    />

    <EditText
        android:id="@+id/edit_name"
        style="@style/Edit_Text"
        android:hint="@string/nome"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@id/containerComponents"
        app:layout_constraintEnd_toEndOf="@id/containerComponents"
        app:layout_constraintTop_toTopOf="@id/containerComponents"
    />

    <EditText
        android:id="@+id/edit_email"
        style="@style/Edit_Text"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:drawableEnd="@drawable/ic_email"
        app:layout_constraintStart_toStartOf="@id/containerComponents"
        app:layout_constraintEnd_toEndOf="@id/containerComponents"
        app:layout_constraintTop_toBottomOf="@id/edit_name"
    />

    <EditText
        android:id="@+id/edit_password"
        style="@style/Edit_Text"
        android:hint="@string/senha"
        android:inputType="numberPassword"
        android:drawableEnd="@drawable/ic_eye"
        app:layout_constraintStart_toStartOf="@id/containerComponents"
        app:layout_constraintEnd_toEndOf="@id/containerComponents"
        app:layout_constraintTop_toBottomOf="@id/edit_email"
    />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_cadastrar"
        style="@style/Button"
        android:text="@string/cadastrar"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/containerComponents"
    />

</androidx.constraintlayout.widget.ConstraintLayout>